<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_profile_foreground"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/icon_login_foreground"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/icon_group_foreground"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/icon_calender_foreground"
            android:title="@string/menu_calendar" />
    </group>
</menu>